--- a/src/assets/scss/_app.scss
+++ b/src/assets/scss/_app.scss
@@ -1,16 +1,14 @@
-@import '~bootstrap/scss/functions';
-@import '~bootstrap/scss/variables';
-@import '~bootstrap/scss/mixins';
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
 
-@import 'variables';
+@import "variables";
 
-@import './common/main';
-@import './common/animation';
+@import "./common/main";
+@import "./common/animation";
 
-@import './components/bubble-btn';
-@import './components/board';
-@import './components/header';
-@import './components/content';
-@import './components/action';
-
-
+@import "./components/bubble-btn";
+@import "./components/board";
+@import "./components/header";
+@import "./components/content";
+@import "./components/action";
