--- a/src/assets/scss/common/_animation.scss
+++ b/src/assets/scss/common/_animation.scss
@@ -4,7 +4,7 @@
   .qkb-fadeUp-leave-active {
     opacity: 1;
     transform: translate(0, 0);
-    transition: opacity .15s linear, transform .2s ease-out;
+    transition: opacity 0.15s linear, transform 0.2s ease-out;
   }
 
   .qkb-fadeUp-enter,
@@ -18,7 +18,7 @@
   .qkb-scaleUp-leave-active {
     opacity: 1;
     transform: scale(1, 1);
-    transition: opacity .1s linear, transform .2s ease-out;
+    transition: opacity 0.1s linear, transform 0.2s ease-out;
   }
 
   .qkb-scaleUp-enter,
@@ -27,7 +27,6 @@
     opacity: 0;
   }
 }
-
 
 // Typing indicator
 @keyframes qkbJump {
@@ -39,7 +38,7 @@
   }
 }
 
-$typing-duration: .35s;
+$typing-duration: 0.35s;
 
 .qkb-msg-bubble__typing-indicator {
   span,
