--- a/src/assets/scss/components/_action.scss
+++ b/src/assets/scss/components/_action.scss
@@ -9,7 +9,7 @@
 
 .qkb-board-action--disabled {
   &::before {
-    content: '';
+    content: "";
     display: block;
     position: absolute;
     z-index: 10;
@@ -17,7 +17,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    opacity: .2;
+    opacity: 0.2;
     cursor: not-allowed;
   }
 }
@@ -77,8 +77,8 @@
   box-shadow: none;
   background-color: transparent;
   cursor: pointer;
-  opacity: .6;
-  transition: opacity linear .1s;
+  opacity: 0.6;
+  transition: opacity linear 0.1s;
 
   &:hover {
     opacity: 1;
