--- a/src/assets/scss/components/_board.scss
+++ b/src/assets/scss/components/_board.scss
@@ -9,7 +9,7 @@
   margin-bottom: 10px;
   border-radius: $board-radius;
   background-color: $board-bg;
-  box-shadow: 0 3px 30px 0 rgba(0, 0, 0, .15);
+  box-shadow: 0 3px 30px 0 rgba(0, 0, 0, 0.15);
 
   @media screen and (max-width: 600px) {
     width: 100%;
