--- a/src/assets/scss/components/_bubble-btn.scss
+++ b/src/assets/scss/components/_bubble-btn.scss
@@ -13,11 +13,11 @@
   color: $bubble-btn-color;
   fill: $bubble-btn-color;
   cursor: pointer;
-  box-shadow: 0 3px 5px 0 rgba(0, 0, 0, .15);
-  transition: opacity linear .2s;
+  box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.15);
+  transition: opacity linear 0.2s;
 
   &:hover {
-    opacity: .85;
+    opacity: 0.85;
   }
 }
 
