convert Pug to HTML + reconfigure eslint

--- a/src/assets/scss/common/_animation.scss
+++ b/src/assets/scss/common/_animation.scss
@@ -49,7 +49,7 @@ $typing-duration: 0.35s;
   }
 
   span {
-    animation-delay: $typing-duration / 2;
+    animation-delay: calc($typing-duration / 2);
   }
 
   &::after {
