full-screen feature

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -11,6 +11,7 @@ $bubble-btn-color: $white;
 $board-bg: $white;
 $board-radius: 8px;
 $board-width: 376px;
+$board-full-screen-width: 96vw;
 
 // Header
 $header-height: 50px;
