--- a/src/assets/scss/components/_board.scss
+++ b/src/assets/scss/components/_board.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   position: absolute;
-  right: 0;
+  right: 16px;
   overflow: hidden;
   width: $board-width;
   height: 80vh;
@@ -14,4 +14,10 @@
   @media screen and (max-width: 600px) {
     width: 100%;
   }
+}
+.qkb-board-full-screen {
+  width: $board-full-screen-width;
+}
+.apply-transition {
+  transition: all 0.5s linear;
 }
