--- a/src/assets/scss/common/_main.scss
+++ b/src/assets/scss/common/_main.scss
@@ -25,3 +25,30 @@
   height: 0;
   overflow: hidden;
 }
+
+// reset lists
+ol,
+ul,
+dl {
+  padding-left: 1rem;
+}
+p {
+  margin: 0.3rem 0 !important;
+  padding: 0 !important;
+}
+
+::-webkit-scrollbar {
+  height: 1rem;
+  width: 0.5rem;
+}
+::-webkit-scrollbar-thumb {
+  --tw-border-opacity: 1;
+  background-color: rgba(217, 217, 227, 0.8);
+  border-color: rgba(255, 255, 255, var(--tw-border-opacity));
+  border-radius: 9999px;
+  border-width: 1px;
+}
+::-webkit-scrollbar-track {
+  background-color: transparent;
+  border-radius: 9999px;
+}
