--- a/src/assets/scss/components/_action.scss
+++ b/src/assets/scss/components/_action.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex: none;
   height: $action-height;
-  padding: 0.45rem 1.25rem 0.5rem;
+  padding: 0.45rem 1.25rem;
   border-top: 1px solid $action-line;
 }
 
@@ -37,6 +37,7 @@
 .qkb-board-action__input {
   height: 100%;
   width: 100%;
+  max-height: 300px;
   padding: 0;
   font-size: 0.875rem;
   border: 0;
@@ -44,7 +45,7 @@
   box-shadow: none;
   outline: 0;
   color: #000;
-
+  resize: none;
   &[disabled="disabled"] {
     pointer-events: none;
   }
