--- a/src/assets/scss/components/_bubble-btn.scss
+++ b/src/assets/scss/components/_bubble-btn.scss
@@ -15,10 +15,10 @@
   fill: $bubble-btn-color;
   cursor: pointer;
   box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.15);
-  transition: opacity linear 0.2s;
+  transition: transform ease-in-out 0.2s;
 
   &:hover {
-    opacity: 0.85;
+    transform: scale(1.1);
   }
 }
 
