--- a/src/assets/scss/common/_main.scss
+++ b/src/assets/scss/common/_main.scss
@@ -39,11 +39,11 @@ p {
 
 ::-webkit-scrollbar {
   height: 1rem;
-  width: 0.5rem;
+  width: 0.4rem;
 }
 ::-webkit-scrollbar-thumb {
   --tw-border-opacity: 1;
-  background-color: rgba(217, 217, 227, 0.8);
+  background-color: rgb(164, 164, 175, 0.8);
   border-color: rgba(255, 255, 255, var(--tw-border-opacity));
   border-radius: 9999px;
   border-width: 1px;
@@ -51,4 +51,17 @@ p {
 ::-webkit-scrollbar-track {
   background-color: transparent;
   border-radius: 9999px;
+}
+pre {
+  ::-webkit-scrollbar {
+    height: 0.4rem !important;
+    width: 0.4rem !important;
+  }
+  ::-webkit-scrollbar-thumb {
+    --tw-border-opacity: 1 !important;
+    background-color: rgb(164, 164, 175, 0.8) !important;
+    border-color: rgba(255, 255, 255, var(--tw-border-opacity)) !important;
+    border-radius: 9999px !important;
+    border-width: 1px !important;
+  }
 }
