--- a/src/assets/scss/components/_bubble-btn.scss
+++ b/src/assets/scss/components/_bubble-btn.scss
@@ -9,6 +9,7 @@
   padding: 0;
   outline: 0;
   border: 0;
+  overflow: hidden;
   box-shadow: none;
   border-radius: 50%;
   color: $bubble-btn-color;
